Removed "datarows" from bulk search. Return taxonomy_ids as int. Require API key for bulk search
